# db-lens-mcp

./: .gitignore  AGENTS.md  README.en.md  README.md  pyproject.toml
.harness/: README.md
.harness/changes/: 2026-06-28-mcp-client-installers.md  2026-06-29-mcp-read-only-annotations.md  2026-06-29-multi-database-table-cache.md  README.md
.harness/docs/: README.md  architecture.md  roadmap.md
.harness/docs/modules/: README.md  configuration.md  database-inspection.md  deployment.md  mcp-tools.md  security-boundary.md
.harness/docs/standards/: README.md  documentation.md  domain-design.md  engineering.md  security.md  testing.md
.harness/routing/: README.md  context-map.md  workflow.md
.harness/templates/: change.md
docs/superpowers/plans/: 2026-06-28-mcp-handoff.md
docs/superpowers/specs/: 2026-06-28-mcp-handoff-design.md
scripts/: install.sh
src/db_lens_mcp/: __init__.py  errors.py  logging.py
src/db_lens_mcp/application/: database_inspection_service.py  query_inspection_service.py  table_locator_service.py
src/db_lens_mcp/cli/: language.py  main.py
src/db_lens_mcp/domain/: models.py  risk_rules.py  sql_guard.py
src/db_lens_mcp/infrastructure/config/: config_loader.py  config_models.py
src/db_lens_mcp/mcp/: schemas.py  server.py  tools.py
tests/: test_cli.py  test_config_cli.py  test_config_loader.py  test_mcp_server.py  test_mysql_connection_factory.py  test_mysql_explain_runner.py  test_mysql_metadata_reader.py  test_query_inspection_service.py  test_secret_store.py  test_sql_guard.py  test_table_locator_service.py
(+6 files in other folders)
